# AI-Powered-Brochure-Generator

./: .env.example  airline_ai_assistant.ipynb  fetch_website_content.ipynb  multiModal.ipynb  pyproject.toml  sales_brochure_generator.ipynb  sales_brochure_gradio.ipynb
.ipynb_checkpoints/: sales_brochure_gradio-checkpoint.ipynb
